express-ms.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-deployment
spec:
  selector:
    matchLabels:
      app: express
  replicas: 1
  template:
    metadata:
      labels:
        app: express
    spec:
      containers:
      - name: express
        image: alexisli/express-microservice:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: express-service
spec:
  selector:
    app: express
  ports:
  - name: http
    port: 3000
    targetPort: 80
  type: NodePort
