ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
  - host: form.default
    http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: angular-service
              port:
                number: 4200
        - path: "/exp"
          pathType: Prefix
          backend:
            service:
              name: express-service
              port:
                number: 3000
